# node-flac-bindings

./: .clang-format  .eslintrc.json  .gitignore  .npmignore  CMakeLists.txt  Jenkinsfile  LICENSE  binding.gyp  coverage.sh  index.js  jest.config.js  package-lock.json  package.json  readme.md  rollup.config.js  test.js  tsconfig.json  vitest.config.ts
.github/workflows/: avoid-double-delete-ref-in-object-wrap.patch  codeql-analysis.yml  coverage.yml  nodejs.yml
examples/: .eslintrc.yaml  _args.js  _print-metadata.js  easy-play.js  flac2wav.js  index.md  mic2flac.js  mic2flac2icecast.js  read-metadata-2.js  read-metadata.js  wav2flac.js  write-metadata-2.js  write-metadata.js
lib/: api.d.ts  api.js  decoder.d.ts  decoder.js  encoder.d.ts  encoder.js  index.d.ts  index.js
lib/decoder/: file-decoder.d.ts  file-decoder.js  index.d.ts  index.js  interfaces.d.ts  stream-decoder.d.ts  stream-decoder.js
lib/encoder/: file-encoder.d.ts  file-encoder.js  helper.js  index.d.ts  index.js  interfaces.d.ts  stream-encoder.d.ts  stream-encoder.js
scripts/: coverage.sh  flac-build.js  flac-prebuild.js
src/: decoder.cpp  defs.hpp  dl.hpp  encoder.cpp  extra_defs.hpp  flac_addon.hpp  format.cpp  format.h  index.cpp  metadata.cpp  metadata.hpp  metadata0.cpp  metadata1.cpp  metadata2.cpp  pointer.hpp  test_async.cpp
src/decoder/: async-decoder.cpp  decoder-builder.cpp  decoder.cpp  decoder.hpp
src/encoder/: async-encoder.cpp  encoder-builder.cpp  encoder.cpp  encoder.hpp
src/flac/: decoder.hpp  encoder.hpp  format.h  format.hpp  metadata.hpp  metadata0.hpp  metadata1.hpp  metadata2.hpp
src/flac/impl/: decoder.cpp  encoder.cpp  format.cpp  metadata.cpp  metadata0.cpp  metadata1.cpp  metadata2.cpp
src/format/: format.cpp
src/mappings/: defs.hpp  frame.cpp  mapping.hpp  mappings.hpp  native_async_iterator.hpp  native_iterator.cpp  native_iterator.hpp  streammetadata.cpp  streammetadata_application.cpp  streammetadata_cuesheet.cpp  streammetadata_cuesheet_index.cpp  streammetadata_cuesheet_track.cpp  streammetadata_padding.cpp  streammetadata_picture.cpp  streammetadata_seekpoint.cpp  streammetadata_seektable.cpp  streammetadata_streaminfo.cpp  streammetadata_unknown.cpp  streammetadata_vorbiscomment.cpp
src/metadata/: async-io-metadata2.cpp  metadata.cpp  metadata.hpp  metadata0.cpp  metadata1.cpp  metadata2.cpp  metadata2.hpp
src/utils/: async.hpp  converters.hpp  defer.hpp  defs.hpp  dl.hpp  encoder-decoder-async.hpp  encoder_decoder_utils.hpp  enum.hpp  fns.cpp  js_utils.hpp  pointer.hpp  symbol.hpp
test/: .eslintrc.yaml  async.js  async.test.js  encode-decode.test.js  fns.test.js  format.test.js  gc.js  metadata.test.js  metadata0.test.js  metadata1.test.js  metadata2.test.js
test/data/audio/: loop.flac  loop.oga
test/data/tags/: no.flac  vc-cs.flac  vc-p.flac
test/encode-decode/: async-api.test.js  js-streams.test.js  sync-api.test.js
test/helper/: async-chai-extensions.d.ts  async-chai-extensions.js  compare-pcm.js  deferred.js  gc.js  generate-flac-callbacks.js  get-wav-audio.js  global-setup.js  index.js  join-into-interleaved.js  loop-pcm-audio.js  path-for-file.js  setup.js
test/metadata/: application.test.js  cue-sheet-index.test.js  cue-sheet-track.test.js  cue-sheet.test.js  metadata.test.js  padding.test.js  picture.test.js  seek-point.test.js  seek-table.test.js  stream-info.test.js  unknown.test.js  vorbis-comment.test.js
